# aws-cdk-bom

./: .mcp.json  CLAUDE.md  Makefile  README.md  app.py  pyproject.toml
aws_cdk_bom/: aws_cdk_bom_stack.py
aws_cdk_bom/aspects/: __init__.py  bom_aspect.py
tests/unit/: test_aws_cdk_bom_stack.py
