[project]
name = "aws-cdk-bom"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.244.0,<3.0.0",
    "constructs>=10.5.0,<11.0.0",
    "xirokampi-constructs-base",
    "xirokampi-foo-construct",
    "xirokampi-bar-construct",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
xirokampi-constructs-base = { workspace = true }
xirokampi-foo-construct   = { workspace = true }
xirokampi-bar-construct   = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.0.0"]
