[project]
name = "aws-cdk-bom"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.244.0,<3.0.0",
    "constructs>=10.5.0,<11.0.0",
    "xirokampi-constructs-base",
    "xirokampi-utils",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
xirokampi-constructs-base = { workspace = true }
xirokampi-utils           = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.0.0"]
